# goit-pycore-hw-09

./: Dockerfile  README.md  app.py  pyproject.toml  views.py
assistant_bot/: __init__.py  main.py
